--- a/soal5/PotYukawa.html
+++ b/soal5/PotYukawa.html
@@ -5,6 +5,6 @@
 		<meta charset="iso-8859-1" />
 	</head>
 	<body>
-		<script src="yukawa2.js"></script>
+		<script src="PotYukawa.js"></script>
 	</body>
 </html>
